# n-body-problem

./: .gitignore  Euler.py  EulerCromer.py  Integrator.py  LICENSE  Leapfrog.py  Leapfrog2.py  Leapfrog2Int.py  Leapfrog3.py  NBody.py  NMath.py  OrbitPlotter.py  README.md  euler.py  euler_cromer.py  exceptions.py  integrator.py  leapfrog_2.py  leapfrog_3.py  leapfrog_3_sync.py  mp_stability_plotter.py  nbody.py  nmath.py  orbit_plotter.py  requirements.txt  setup.cfg  stability_analyser.py  stability_investigation.py  stability_plotter.py  testing.py  three_body.py
backend/: .gitignore
backend/nbodyBACKEND/: manage.py
backend/nbodyBACKEND/api/: admin.py  models.py  request_validator.py  serialisers.py  urls.py  views.py
backend/nbodyBACKEND/nbodyBACKEND/: asgi.py  settings.py  urls.py  wsgi.py
backend/nbodyBACKEND/sim/: integrator.py  nmath.py  orbit_plotter.py
docs/: CNAME
frontend/nbody-frontend/: package-lock.json  package.json
frontend/nbody-frontend/public/: index.html
integrators/: euler_cromer.py  leapfrog_3.py
report_data/: perturbs_made_2.txt  report_jsons.json  stable_jsons.json
sim/: leapfrog_2.py  leapfrog_3.py  leapfrog_3_sync.py  mp_stability_plotter.py  nbody.py  stability_analyser.py  stability_plotter.py
sim/testing/: testing_integrators.py  testing_nbody.py  testing_nmath.py
src/nbodysim/: nbody.py  nmath.py  orbit_plotter.py  three_body.py
stability_investigation/: mp_stability_plotter.py  stability_analyser.py  stability_plotter.py
testing/: testing_integrators.py  testing_nbody.py  testing_nmath.py  testing_run.py
(+45 files in other folders)
