[metadata]
name = nbodysim
version = 1.0.0
author = Antonio León Villares
author_email = aleonvillares31415@gmail.com
description = N-Body simulator and analyser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alv31415/n-body-problem
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src